Created a method to find OS then implemented it in the get OfficeVersion just for windows... NEED TO DO GET OFFICE VERSION FOR OTHER OS